<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>part3_1_pub_sub_int32</name>
  <version>0.0.0</version>
  <description>The part3_1_pub_sub_int32 package</description>
  <maintainer email="ray255ar@gmail.com">ubuntu</maintainer>
  <license>Apache License, Version 2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>example_interfaces</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>