<?xml version="1.0"?>
<package format="2">
  <name>pub_sub_int32</name>
  <version>0.0.0</version>
  <description>The pub_sub_int32 package</description>

  <maintainer email="ray255ar@gmail.com">Ar-Ray-code</maintainer>

  <license>Apache License, Version 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>

</package>
